# mith

./: .env  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
mith/: __init__.py  _base.py  app.py  commands.py  config.py  const.py  gql.py  gqltypes.py  settings.py  shared.gql  types.py  utils.py
mith/alchemy/: __init__.py  utils.py
mith/cutters/project/: cookiecutter.json
mith/cutters/project/{{cookiecutter.package_name}}/: pyproject.toml
mith/cutters/service/: cookiecutter.json
mith/example/services/products/: __init__.py  api.py  repositories.py
mith/example/services/reviews/: __init__.py  api.py  repositories.py
mith/example/services/users/: __init__.py  api.py  repositories.py  settings.py
mith/example/types/: products.py  reviews.py  users.py
mith/service/: __init__.py
tests/: test_polymith.py
